syntax = "proto3";

package runtiva.nats.v1;


// Empty response for NATS requests to indicate success or failure (w/ error details)
message NatsEmptyResponse {
  oneof msg {
    bool success = 1;
    runtiva.nats.v1.ErrorReply error = 2;
  }
}

// NATS does not have headers, so to pass around the initila incoming client request header details, we convert to this message type and 
// use it as part of each NAT Request message 
 message Metadata {
     repeated MetadataMap headers = 1;
 }

message MetadataMap {
    string key = 1;
    repeated string value = 2;
}

// Internal/NATS Error Response
message ErrorReply {
  int32 code = 1;
  string message = 2;
  int32 status = 3;
  repeated ErrorDetails details = 4;
}

message ErrorDetails {
  string reason = 1;
  string domain = 2;
  repeated MetaData metadata = 3;
}

message MetaData {
  string key = 1;
  string value = 2;
}